# iganaq

./: .gitignore  README.md
ocaml/: .justfile  .ocamlformat  .ocamlformat-ignore  README.md  TODO.md  dune-project  dune-workspace  justfile  tori.opam
ocaml/lib/: dune  qol.ml
ocaml/lib/checks/: checks.ml
ocaml/lib/parsers/: argument.ml
ocaml/lib/parsers/config/: fetcher.ml  lexer.ml  lexer.mli  parser.ml  parser.mli
ocaml/lib/schema/: schema.ml
ocaml/lib/system/: file.ml  os.ml  package.ml
ocaml/lib/system/process/: command.ml  fork.ml  reader.ml  su.ml
ocaml/lib/types/: structures.ml
ocaml/lib/utilities/: aliases.ml  exceptions.ml  log.ml  text.ml
ocaml/test/: cram.t  dune  test_tori.ml
