(lang dune 3.17)

(name tori)
(version 0.8.0)

(homepage https://tori.jutty.dev)
(source (uri git+https://brew.bsd.cafe/tori/tori.git))
(authors "Juno Takano <juno@jutty.dev>")
(maintainers "Juno Takano <juno@jutty.dev>")
(license GPL-3.0-only)
(documentation https://tori.jutty.dev/docs)

(package
    (name tori)
    (synopsis "Track system configurations and replicate them")
    (description
      "\> tori lets you define several characteristics of a unix system and
      "\> track changes happen along time, allowing you to choose whether or
      "\> not to commit. It aims for portability and declarative configuration
      "\> practices, meaning you tell it what your system is, not how to
      "\> reproduce it.
    )
    (tags ("operating systems" "unix" "configuration management"))
    (depends
        (ocaml (>= 5.3.0))
        (dune (>= 3.17.2))
        (bisect_ppx (and :dev (>= 2.5.0)))
    )
)

(generate_opam_files true)
